test/modules/error/undeclared_module.f90
program a
    use undeclaredmod
end program